// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`YourInfoForm renders 1`] = `
<div
  className="layout"
>
  <header>
    <h1
      className="au-display-xl"
      tabIndex="-1"
    >
      Contact details
    </h1>
  </header>
  <article
    role="main"
  >
    <div
      className="calloutMistake"
    >
      <b>
         Avoid common mistakes 
      </b>
      <ul
        className="mistake-list"
      >
        <li>
          <b>
            Contact names
          </b>
           - use full names.
        </li>
        <li>
          <b>
            Email and phone numbers
          </b>
           - Check the format and details are correct.
        </li>
      </ul>
    </div>
    <form
      action={undefined}
      id="yourinfo"
      method="post"
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <h2>
        Authorised representative
      </h2>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="representative"
        >
          Name
        </label>
        <p
          className="hint"
          id="representative-hint"
        >
          This is the person authorised to enter into contracts on behalf of the business.
        </p>
        <input
          className=""
          disabled={false}
          id="representative"
          maxLength={undefined}
          name="representative"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value={undefined}
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="email"
        >
          Email
        </label>
        <input
          className=""
          disabled={false}
          id="email"
          maxLength={undefined}
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value={undefined}
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="phone"
        >
          Phone
        </label>
        <input
          className=""
          disabled={false}
          id="phone"
          maxLength={undefined}
          name="phone"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value={undefined}
        />
      </div>
      <h2>
        Business contact
      </h2>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="contact_name"
        >
          Name
        </label>
        <p
          className="hint"
          id="contact_name-hint"
        >
          The contact listed on your seller profile page and the person who receives new opportunities by email.
        </p>
        <input
          className=""
          disabled={false}
          id="contact_name"
          maxLength={undefined}
          name="contact_name"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value={undefined}
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="contact_email"
        >
          Email
        </label>
        <input
          className=""
          disabled={false}
          id="contact_email"
          maxLength={undefined}
          name="contact_email"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value={undefined}
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="contact_phone"
        >
          Phone
        </label>
        <input
          className=""
          disabled={false}
          id="contact_phone"
          maxLength={undefined}
          name="contact_phone"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value={undefined}
        />
      </div>
      <div
        className="row"
      >
        <div />
        <div
          className="col-xs-12 col-sm-12 col-md-9"
        >
          <button
            className="button-width button-width-left"
            type="submit"
          >
            Save and continue
          </button>
          <button
            className="save-button button-width button-width-right"
            onClick={[Function]}
          >
            Save and finish later
          </button>
        </div>
        <div
          className="col-xs-12 col-sm-12 col-md-3"
        >
          <div
            styleName="skip"
          >
            <button
              className="button-secondary"
              onClick={[Function]}
              styleName="skip-link"
            >
              Skip for now
            </button>
          </div>
        </div>
      </div>
    </form>
  </article>
</div>
`;

exports[`YourInfoForm renders with edit mode 1`] = `
<div
  className="layout"
>
  <header>
    <h1
      className="au-display-xl"
      tabIndex="-1"
    >
      Contact details
    </h1>
  </header>
  <article
    role="main"
  >
    <div
      className="calloutMistake"
    >
      <b>
         Avoid common mistakes 
      </b>
      <ul
        className="mistake-list"
      >
        <li>
          <b>
            Contact names
          </b>
           - use full names.
        </li>
        <li>
          <b>
            Email and phone numbers
          </b>
           - Check the format and details are correct.
        </li>
      </ul>
    </div>
    <form
      action="/foo/bar"
      id="yourinfo"
      method="post"
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <input
        id="csrf_token"
        name="csrf_token"
        type="hidden"
        value="sometoken"
      />
      <h2>
        Authorised representative
      </h2>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="representative"
        >
          Name
        </label>
        <p
          className="hint"
          id="representative-hint"
        >
          This is the person authorised to enter into contracts on behalf of the business.
        </p>
        <input
          className=""
          disabled={false}
          id="representative"
          maxLength={undefined}
          name="representative"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value={undefined}
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="email"
        >
          Email
        </label>
        <input
          className=""
          disabled={false}
          id="email"
          maxLength={undefined}
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value={undefined}
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="phone"
        >
          Phone
        </label>
        <input
          className=""
          disabled={false}
          id="phone"
          maxLength={undefined}
          name="phone"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value={undefined}
        />
      </div>
      <h2>
        Business contact
      </h2>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="contact_name"
        >
          Name
        </label>
        <p
          className="hint"
          id="contact_name-hint"
        >
          The contact listed on your seller profile page and the person who receives new opportunities by email.
        </p>
        <input
          className=""
          disabled={false}
          id="contact_name"
          maxLength={undefined}
          name="contact_name"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value={undefined}
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="contact_email"
        >
          Email
        </label>
        <input
          className=""
          disabled={false}
          id="contact_email"
          maxLength={undefined}
          name="contact_email"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value={undefined}
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="contact_phone"
        >
          Phone
        </label>
        <input
          className=""
          disabled={false}
          id="contact_phone"
          maxLength={undefined}
          name="contact_phone"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value={undefined}
        />
      </div>
      <div
        className="row"
      >
        <div />
        <div
          className="col-xs-12 col-sm-12 col-md-9"
        >
          <button
            className="button-width button-width-left"
            type="submit"
          >
            Save and continue
          </button>
          <button
            className="save-button button-width button-width-right"
            onClick={[Function]}
          >
            Save and finish later
          </button>
        </div>
        <div
          className="col-xs-12 col-sm-12 col-md-3"
        >
          <div
            styleName="skip"
          >
            <button
              className="button-secondary"
              onClick={[Function]}
              styleName="skip-link"
            >
              Skip for now
            </button>
          </div>
        </div>
      </div>
    </form>
  </article>
</div>
`;

exports[`YourInfoForm renders with form_options 1`] = `
<div
  className="layout"
>
  <header>
    <h1
      className="au-display-xl"
      tabIndex="-1"
    >
      Contact details
    </h1>
  </header>
  <article
    role="main"
  >
    <div
      className="calloutMistake"
    >
      <b>
         Avoid common mistakes 
      </b>
      <ul
        className="mistake-list"
      >
        <li>
          <b>
            Contact names
          </b>
           - use full names.
        </li>
        <li>
          <b>
            Email and phone numbers
          </b>
           - Check the format and details are correct.
        </li>
      </ul>
    </div>
    <form
      action="/foo/bar"
      id="yourinfo"
      method="post"
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <input
        id="csrf_token"
        name="csrf_token"
        type="hidden"
        value="sometoken"
      />
      <h2>
        Authorised representative
      </h2>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="representative"
        >
          Name
        </label>
        <p
          className="hint"
          id="representative-hint"
        >
          This is the person authorised to enter into contracts on behalf of the business.
        </p>
        <input
          className=""
          disabled={false}
          id="representative"
          maxLength={undefined}
          name="representative"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value={undefined}
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="email"
        >
          Email
        </label>
        <input
          className=""
          disabled={false}
          id="email"
          maxLength={undefined}
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value={undefined}
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="phone"
        >
          Phone
        </label>
        <input
          className=""
          disabled={false}
          id="phone"
          maxLength={undefined}
          name="phone"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value={undefined}
        />
      </div>
      <h2>
        Business contact
      </h2>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="contact_name"
        >
          Name
        </label>
        <p
          className="hint"
          id="contact_name-hint"
        >
          The contact listed on your seller profile page and the person who receives new opportunities by email.
        </p>
        <input
          className=""
          disabled={false}
          id="contact_name"
          maxLength={undefined}
          name="contact_name"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value={undefined}
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="contact_email"
        >
          Email
        </label>
        <input
          className=""
          disabled={false}
          id="contact_email"
          maxLength={undefined}
          name="contact_email"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value={undefined}
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="contact_phone"
        >
          Phone
        </label>
        <input
          className=""
          disabled={false}
          id="contact_phone"
          maxLength={undefined}
          name="contact_phone"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value={undefined}
        />
      </div>
      <div
        className="row"
      >
        <div />
        <div
          className="col-xs-12 col-sm-12 col-md-9"
        >
          <button
            className="button-width button-width-left"
            type="submit"
          >
            Save and continue
          </button>
          <button
            className="save-button button-width button-width-right"
            onClick={[Function]}
          >
            Save and finish later
          </button>
        </div>
        <div
          className="col-xs-12 col-sm-12 col-md-3"
        >
          <div
            styleName="skip"
          >
            <button
              className="button-secondary"
              onClick={[Function]}
              styleName="skip-link"
            >
              Skip for now
            </button>
          </div>
        </div>
      </div>
    </form>
  </article>
</div>
`;
